HTML pages of Admissions, StudentLife and Contact are added

--- a/academics.html
+++ b/academics.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -35,16 +38,16 @@
                     <a href="./aboutUs.html">About Us</a>
                 </li>
                 <li>
-                    <a href="#">Academics</a>
+                    <a href="./academics.html">Academics</a>
                 </li>
                 <li>
-                    <a href="#">Admissions</a>
+                    <a href="./admissions.html">Admissions</a>
                 </li>
                 <li>
-                    <a href="#">Student Life</a>
+                    <a href="./studentLife.html">Student Life</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="./contact.html">Contact</a>
                 </li>
             </ul>
             <div>
@@ -158,6 +161,74 @@
                 <img src="./images/academics/physical-education-img.png">
                 <h1>Physical Education</h1>
                 <p>Promoting physical fitness, coordination, and teamwork.</p>
+            </div>
+        </div>
+    </div>
+    <!-- Our rooms gallery -->
+    <div>
+        <div>
+            <button>Our Gallery</button>
+            <h1>Our Rooms Gallery</h1>
+            <p>Step into our Gallery and immerse yourself in a visual journey of cherished moments and unforgettable experiences at our kindergarten school.</p>
+            <div>
+                <button>All</button>
+                <button>Classrooms</button>
+                <button>Library</button>
+                <button>Science Lab</button>
+                <button>Computer Lab</button>
+                <button>Garden and Nature Area</button>
+            </div>
+        </div>
+        <div>
+            <!-- Classrooms -->
+            <div>
+                <img src="./images/academics/classrooms-img.png">
+                <div>
+                    <button><img src="./images/AboutUs/arrow-left-icon.png"></button>
+                    <button><img src="./images/AboutUs/arrow-right-icon.png"></button>
+                </div>
+                <h1>Classrooms</h1>
+                <p>Our well-equipped classrooms are designed to provide a nurturing and stimulating learning environment. Each classroom is thoughtfully arranged to inspire creativity, curiosity, and engagement.</p>
+            </div>
+             <!-- Library -->
+             <div>
+                <img src="./images/academics/library-img.png">
+                <div>
+                    <button><img src="./images/AboutUs/arrow-left-icon.png"></button>
+                    <button><img src="./images/AboutUs/arrow-right-icon.png"></button>
+                </div>
+                <h1>Library</h1>
+                <p>Our expansive library is a treasure trove of books, fostering a love for reading and supporting students' literacy development.</p>
+            </div>
+             <!-- Science Lab -->
+             <div>
+                <img src="./images/academics/science-lab-img.png">
+                <div>
+                    <button><img src="./images/AboutUs/arrow-left-icon.png"></button>
+                    <button><img src="./images/AboutUs/arrow-right-icon.png"></button>
+                </div>
+                <h1>Science Lab</h1>
+                <p>Our hands-on science lab allows students to conduct experiments and explore scientific concepts in a fun and interactive way.</p>
+            </div>
+             <!-- Computer Lab -->
+             <div>
+                <img src="./images/academics/computer-lab-img.png">
+                <div>
+                    <button><img src="./images/AboutUs/arrow-left-icon.png"></button>
+                    <button><img src="./images/AboutUs/arrow-right-icon.png"></button>
+                </div>
+                <h1>Computer Lab</h1>
+                <p>Equipped with age-appropriate technology, the computer lab enhances students' digital literacy and computational skills</p>
+            </div>
+             <!-- Garden and Nature Area -->
+             <div>
+                <img src="./images/academics/garden-and-nature-area-img.png">
+                <div>
+                    <button><img src="./images/AboutUs/arrow-left-icon.png"></button>
+                    <button><img src="./images/AboutUs/arrow-right-icon.png"></button>
+                </div>
+                <h1>Garden and Nature Area</h1>
+                <p>Our garden and nature area offer an opportunity for children to connect with nature and learn about plants and the environment.</p>
             </div>
         </div>
     </div>
