--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -35,16 +38,16 @@
                     <a href="./aboutUs.html">About Us</a>
                 </li>
                 <li>
-                    <a href="#">Academics</a>
+                    <a href="./academics.html">Academics</a>
                 </li>
                 <li>
-                    <a href="#">Admissions</a>
+                    <a href="./admissions.html">Admissions</a>
                 </li>
                 <li>
-                    <a href="#">Student Life</a>
+                    <a href="./studentLife.html">Student Life</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="./contact.html">Contact</a>
                 </li>
             </ul>
             <div>
